--- a/scico.tex
+++ b/scico.tex
@@ -379,7 +379,7 @@
 	\fbox{\parbox[c]{\textwidth}{Zunächst lege eine Band-matrix-Datenstruktur für L an. der Speicherverbauch ist nun $O(mb)$ anstatt $O(m^2)$, wobei b die bandbreite von der Bandmatrix ist. Bei der Berechnung der $l_{ij}$ von L müssen nur Einträge $l_{ij} \in Band(L)$ berücksichtigt werden, da alle anderen einträge null sind. Dies reduziert den Rechenaufwand von $O(m^3)$ auf $O(mb^2)$
 		Löse nun $Ly=b$ und $L^Tx=y$ unter ausnutzung der Bandbegrenzung von L, dies reduziert den aufwand von $O(m^2$ auf $O(mb)$.}}
 	
-	\item \textbf{ Wieso macht man den Band-\chf und was ist der Vorteil davon?}
+	\item \textbf{ Wieso macht man den Band-\chf und was ist der Vorteil davon?}\newline
 	\fbox{\parbox[c]{\textwidth}{Geringerer Speicherplatzverbrauch und schneller (vgl. Frage davor).}}
 	\item \textbf{ Was macht der Minimum degree-Algorithmus?}\newline
 	\fbox{\parbox[c]{\textwidth}{
