added solver overview

--- a/scico.tex
+++ b/scico.tex
@@ -194,6 +194,11 @@
 	}}
 	\item \textbf{ Wie ist die Pseudoinverse definiert?}\newline
 	\fbox{\parbox[c]{\textwidth}{$A^+ = (A^T A)^{-1} A^T $}}
+	\item \textbf{Übersichtstabelle der LGS-Löser:}\newline
+	\fbox{\parbox[c]{\textwidth}{
+			\includegraphics[scale=0.5]{solver.png}		
+		}}
+	
 \end{enumerate}
 
 \section{Konditionierung und finite Differenzen}
