added picture to clarify symmetric gauss

--- a/scico.tex
+++ b/scico.tex
@@ -147,7 +147,9 @@
 	}}
 	
 	\item \textbf{ Was ist \chf? Wie funktioniert sie?} \newline
-	\fbox{\parbox[c]{\textwidth}{Robuster, effizienter Löser für spd Matrizen. Das Verfahren basiert auf der symmetrischen Gauß-Elimination. Dabei wird die Matrix $A$ in die Faktoren $L$ und $L^T$ zerlegt.  $A=\begin{pmatrix}
+	\fbox{\parbox[c]{\textwidth}{Robuster, effizienter Löser für spd Matrizen. Das Verfahren basiert auf der symmetrischen Gauß-Elimination. \\
+	\includegraphics[scale=0.3]{symgauss.png}\\		
+	Dabei wird die Matrix $A$ in die Faktoren $L$ und $L^T$ zerlegt.  $A=\begin{pmatrix}
 	a_{11} & w^T \\
 	w & K
 	\end{pmatrix}$ \newline
